2010-11-20  John M Chambers  <jmc@r-project.org>

	* R/Module.R now checks for the existence of a default constructor
	for a C++ class and generates a suitable $initialize() method accordingly.

2010-11-20  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/vector/MatrixRow.h: added missing return *this ;

	* R/Module.R: dispatch based on void-ness of the methods. For example
	if all methods are known to be void, etc ...

	* R/00_classes.R: more information in the C++OverloadedMethods ref
	class

	* src/Module.cpp: new .External CppMethod__invoke_void and
	CppMethod__invoke_notvoid that are used when we know for sure that
	all overloaded methods are void, or not void

	* inst/include/Rcpp/Module.h: class_ gains invoke_void and
	invoke_notvoid to support the changes above

2010-11-18  Douglas Bates  <bates@stat.wisc.edu>

	* inst/include/Rcpp/module/Module_generated_[class_]Constructor.h:
	allow up to 6 arguments to .constructor

2010-11-18  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/Module.h: rework the class_ template to allow
	overloaded methods

	* R/00_classes.R: The C++Method class disappears and the
	C++OverloadedMethods enters. a "C++OverloadedMethods" object points
	to a set of overloaded C++ methods that all share the same name.

	* R/Module.R: adapt some of the code to cope with changes above

2010-11-17  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/sugar/as_vector.h: added the as_vector function
	that turns a sugar matrix expression into a vector of the appropriate
	type

	* inst/include/Rcpp/vector/Matrix.h: new SubMatrix class

2010-11-13  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/Module.h: expose constructors as the
	"cpp_constructor" field of "C++ClassRepresentation" and the
	"constructors" slot of "C++Class"

2010-11-07  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/sugar/operators/minus.h: fixed
	Minus_Vector_Primitive<RTYPE,false,T>
